app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser-deployment
  labels:
    app: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec: 
      containers:
      - name: filebrowser
        image: quay.io/vcppds7878/filebrowser:latest
        imagePullPolicy: Always
        volumeMounts:                     
          - name: filebrowser-vol
            mountPath: /srv
      volumes:
        - name: filebrowser-vol
          persistentVolumeClaim:
            claimName: filebrowser-pvc                
      resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-svc
  labels:
    app: filebrowser
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: filebrowser
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: filebrowser-route
  labels:
    app: filebrowser    
spec:
  host: ''
  to:
    kind: Service
    name: filebrowser-svc
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
